--- a/src/scss/obsidian/modals.scss
+++ b/src/scss/obsidian/modals.scss
@@ -36,6 +36,7 @@ body:not(.is-mobile) .modal {
 }
 .modal-button-container {
   margin-top:10px;
+  margin-bottom:2px;
   button {
     margin-top:10px
   }
