--- a/src/scss/plugins-core/prompt.scss
+++ b/src/scss/plugins-core/prompt.scss
@@ -2,7 +2,10 @@
 /* Used for command palette and quick switcher */
 
 .prompt {
-  box-shadow:0 5px 100px rgba(0,0,0,0.15);
+  box-shadow:
+    0px 2.7px 6.7px rgba(0, 0, 0, 0.04),
+    0px 8.9px 22.3px rgba(0, 0, 0, 0.06),
+    0px 40px 100px rgba(0, 0, 0, 0.1);
   padding-bottom:0;
   border:1px solid var(--modal-border);
 }
